# webrender

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml
ci-scripts/: windows-tests.cmd
direct-composition/: Cargo.toml
direct-composition/src/: main_windows.rs
examples/: Cargo.toml  alpha_perf.rs  animation.rs  basic.rs  blob.rs  document.rs  frame_output.rs  iframe.rs  image_resize.rs  multiwindow.rs  scrolling.rs  texture_cache_stress.rs  yuv.rs
examples/common/: boilerplate.rs
webrender/: Cargo.toml  build.rs  build_gfx.rs  shaders.ron
webrender/examples/: alpha_perf.rs  animation.rs  animation_dx.rs  basic.rs  basic_dx.rs  basic_hal.rs  blob.rs  blob_dx.rs  border.rs  border_dx.rs  document.rs  frame_output.rs  gradient.rs  gradient_dx.rs  iframe.rs  iframe_dx.rs  image_resize.rs  image_resize_dx.rs  isolated_dx.rs  multiwindow.rs  nested_display_list_dx.rs  scrolling.rs  scrolling_dx.rs  texture_cache_stress.rs  texture_cache_stress_dx.rs  yuv.rs  yuv_dx.rs
webrender/examples/common/: boilerplate.rs  boilerplate_dx.rs  boilerplate_hal.rs
webrender/res/: base.glsl  base_gfx.glsl  blit.glsl  brush.glsl  brush_blend.glsl  brush_image.glsl  brush_linear_gradient.glsl  brush_radial_gradient.glsl  brush_solid.glsl  brush_yuv_image.glsl  clip_shared.glsl  cs_blur.fs.glsl  cs_blur.glsl  cs_blur.vs.glsl  cs_border_segment.glsl  cs_border_solid.glsl  cs_box_shadow.fs.glsl  cs_box_shadow.glsl  cs_box_shadow.vs.glsl  cs_clip_border.fs.glsl  cs_clip_border.glsl  cs_clip_border.vs.glsl  cs_clip_box_shadow.glsl  cs_clip_image.fs.glsl  cs_clip_image.glsl  cs_clip_image.vs.glsl  cs_clip_rectangle.fs.glsl  cs_clip_rectangle.glsl  cs_clip_rectangle.vs.glsl  cs_scale.glsl  cs_svg_filter.glsl  cs_text_run.fs.glsl  cs_text_run.glsl  cs_text_run.vs.glsl  debug_color.fs.glsl  debug_color.glsl  debug_font.fs.glsl  debug_font.glsl  gpu_cache_gfx.glsl  mem_config.ron  (+54 more)
webrender/res_gfx/: base.glsl  brush.glsl  brush_blend.glsl  brush_image.glsl  brush_linear_gradient.glsl  brush_mix_blend.glsl  brush_radial_gradient.glsl  brush_solid.glsl  brush_yuv_image.glsl  cs_blur.glsl  cs_border_segment.glsl  cs_border_solid.glsl  cs_scale.glsl  prim_shared.glsl  ps_text_run.glsl  shared.glsl
webrender/src/: batch.rs  clip.rs  composite.rs  debug_render.rs  device.rs  display_list_flattener.rs  frame.rs  frame_builder.rs  glyph_rasterizer.rs  gpu_cache.rs  gpu_glyph_renderer.rs  gpu_types.rs  image.rs  internal_types.rs  lib.rs  parser.rs  picture.rs  pipelines.rs  prim_store.rs  profiler.rs  query.rs  render_backend.rs  render_target.rs  render_task.rs  render_task_graph.rs  renderer.rs  resource_cache.rs  scene_builder.rs  screen_capture.rs  shade.rs  texture_cache.rs  tiling.rs  vertex_types.rs  window.rs
webrender/src/device/: common.rs  device_api.rs  device_trait.rs  gfx.rs  gl.rs  mod.rs  pipeline_profile.rs  query_gfx.rs  query_gl.rs
webrender/src/device/gfx/: blend_state.rs  buffer.rs  command.rs  descriptor.rs  descriptor_layout.rs  descriptor_set.rs  device.rs  dispose.rs  image.rs  mod.rs  program.rs  render_pass.rs  vertex_types.rs
webrender/src/device_new/: device_api.rs  gl.rs  mod.rs
webrender/src/glyph_rasterizer/: mod.rs  no_pathfinder.rs
webrender/src/prim_store/: mod.rs
webrender/src/query/: mod.rs
webrender/src/shade/: gfx.rs  gl.rs  mod.rs
webrender/tests/: angle_shader_validation.rs
webrender/tools/: spirv-val-mac
webrender_api/: Cargo.toml
webrender_api/src/: api.rs  color.rs  display_list.rs  image.rs  lib.rs
webrender_examples/: Cargo.toml  alpha_perf.rs  animation.rs  basic.rs  blob.rs  document.rs  frame_output.rs  iframe.rs  image_resize.rs  multiwindow.rs  scrolling.rs  texture_cache_stress.rs  yuv.rs
webrender_examples/common/: boilerplate.rs
wrench/: Cargo.toml
wrench/reftests/boxshadow/: reftest.list
wrench/reftests/image/: reftest.list
wrench/reftests/performance/: reftest.list
wrench/reftests/text/: reftest.list
wrench/script/: headless.py  wrench_runner.py
wrench/src/: angle.rs  args.yaml  blob.rs  egl.rs  main.rs  perf.rs  png.rs  reftest.rs  wrench.rs  yaml_frame_reader.rs
