[workspace]
license = "MPL-2.0"
members = [
    "direct-composition",
    "examples",
    "webrender",
    "webrender_api",
    "wrench",
]

[profile.release]
debug = true
panic = "abort"

#[patch.crates-io]
#serde_derive = { git = "https://github.com/servo/serde", branch = "deserialize_from_enums9", feature="deserialize_in_place" }

[replace]
"https://github.com/rust-lang/crates.io-index#serde_derive:1.0.80" = { git = "https://github.com/servo/serde", branch = "deserialize_from_enums9", feature = "deserialize_in_place" }
"https://github.com/rust-lang/crates.io-index#gfx-backend-empty:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="dea8caac9c09e907eeeb7a1d3d18fdd3e42062cb" }
"https://github.com/rust-lang/crates.io-index#gfx-backend-dx12:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="dea8caac9c09e907eeeb7a1d3d18fdd3e42062cb" }
"https://github.com/rust-lang/crates.io-index#gfx-backend-metal:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="dea8caac9c09e907eeeb7a1d3d18fdd3e42062cb" }
"https://github.com/rust-lang/crates.io-index#gfx-backend-vulkan:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="dea8caac9c09e907eeeb7a1d3d18fdd3e42062cb" }
"https://github.com/rust-lang/crates.io-index#gfx-hal:0.1.0" = { git = "https://github.com/gfx-rs/gfx.git", rev="dea8caac9c09e907eeeb7a1d3d18fdd3e42062cb" }
