[package]
name = "direct-composition"
version = "0.1.0"
authors = ["Simon Sapin <simon.sapin@exyr.org>"]
license = "MPL-2.0"

[target.'cfg(windows)'.dependencies]
euclid = "0.17"
gleam = "0.5"
mozangle = {version = "0.1", features = ["egl"]}
webrender = {path = "../webrender", features = ["gleam"]}
winapi = {version = "0.3", features = ["winerror", "d3d11", "dcomp"]}
winit = "0.15"
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx.git" }
