[package]
name = "webrender-examples"
version = "0.1.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"

[[bin]]
name = "alpha_perf"
path = "alpha_perf.rs"

[[bin]]
name = "animation"
path = "animation.rs"

[[bin]]
name = "basic"
path = "basic.rs"

[[bin]]
name = "blob"
path = "blob.rs"

[[bin]]
name = "document"
path = "document.rs"

[[bin]]
name = "frame_output"
path = "frame_output.rs"
required-features = ["gl"]

[[bin]]
name = "iframe"
path = "iframe.rs"

[[bin]]
name = "image_resize"
path = "image_resize.rs"

[[bin]]
name = "multiwindow"
path = "multiwindow.rs"

[[bin]]
name = "scrolling"
path = "scrolling.rs"

[[bin]]
name = "texture_cache_stress"
path = "texture_cache_stress.rs"

[[bin]]
name = "yuv"
path = "yuv.rs"
required-features = ["gl"]

[features]
default = []
debug = ["webrender/capture", "webrender/debugger", "webrender/profiler"]
gfx-hal = ["dirs"]
gl = ["gleam", "glutin", "webrender/gleam"]
vulkan = ["gfx-backend-vulkan", "gfx-hal"]

[dependencies]
app_units = "0.7"
dirs = { version = "1.0", optional = true }
env_logger = "0.5"
euclid = "0.19"
gfx-backend-empty = "0.3.0"
gleam = { version = "0.6.2", optional = true}
glutin = { version = "0.20", optional = true }
rayon = "1"
ron = "0.1.7"
webrender = { path = "../webrender" }
winit = "0.19"

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.3.2"
optional = true
features = ["winit"]

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3.3"
optional = true
features = ["winit"]

[target.'cfg(not(target_os = "macos"))'.dependencies.gfx-backend-vulkan]
version = "0.3.3"
optional = true
features = ["winit", "x11"]
