[package]
name = "webrender-examples"
version = "0.1.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
edition = "2018"

[[bin]]
name = "alpha_perf"
path = "alpha_perf.rs"

[[bin]]
name = "animation"
path = "animation.rs"

[[bin]]
name = "basic"
path = "basic.rs"

[[bin]]
name = "blob"
path = "blob.rs"

[[bin]]
name = "document"
path = "document.rs"

[[bin]]
name = "frame_output"
path = "frame_output.rs"
required-features = ["gl"]

[[bin]]
name = "iframe"
path = "iframe.rs"

[[bin]]
name = "image_resize"
path = "image_resize.rs"

[[bin]]
name = "multiwindow"
path = "multiwindow.rs"

[[bin]]
name = "scrolling"
path = "scrolling.rs"

[[bin]]
name = "texture_cache_stress"
path = "texture_cache_stress.rs"

[[bin]]
name = "yuv"
path = "yuv.rs"
required-features = ["gl"]

[features]
default = ["gl"]
debug = ["webrender/capture", "webrender/debugger", "webrender/profiler"]
gl = ["gfx-backend-empty", "gleam", "glutin", "webrender/gl"]

[dependencies]
app_units = "0.7"
env_logger = "0.5"
euclid = "0.20"
gfx-backend-empty = { optional = true, version = "0.3.1"}
gleam = { optional = true, version = "0.6.2"}
glutin = { optional = true, version = "0.21" }
rayon = "1"
webrender = { path = "../webrender" }
winit = "0.19"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.6.4"
