[package]
name = "webrender"
version = "0.50.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
build = "build.rs"

[features]
default = ["freetype-lib"]
freetype-lib = ["freetype/servo-freetype-sys"]
profiler = ["thread_profiler/thread_profiler"]
debugger = ["ws", "serde_json", "serde", "serde_derive"]
dx11 = ["gfx_device_dx11", "gfx_window_dxgi"]

[dependencies]
app_units = "0.5.6"
bincode = "0.8"
bit-set = "0.4"
byteorder = "1.0"
euclid = "0.15.1"
fxhash = "0.2.1"
lazy_static = "0.2"
log = "0.3"
num-traits = "0.1.32"
time = "0.1"
rayon = "0.8"
webrender_api = {path = "../webrender_api"}
bitflags = "0.9"
gamma-lut = "0.2"
thread_profiler = "0.1.1"
plane-split = "0.6"
ws = { optional = true, version = "0.7.3" }
serde_json = { optional = true, version = "1.0" }
serde = { optional = true, version = "1.0" }
serde_derive = { optional = true, version = "1.0" }
servo-glutin = "0.11"
rand = "0.3"
#gfx = { git = 'https://github.com/gfx-rs/gfx' }
gfx = { path = '../../gfx/src/render' }
#gfx_device_gl = { git = 'https://github.com/gfx-rs/gfx' }
gfx_device_gl = { path = '../../gfx/src/backend/gl' }

[target.'cfg(windows)'.dependencies]
#gfx_device_dx11 = { git = 'https://github.com/gfx-rs/gfx', optional = true}
gfx_device_dx11 = { path = '../../gfx/src/backend/dx11', optional = true}
#gfx_window_dxgi = { git = 'https://github.com/gfx-rs/gfx', optional = true}
gfx_window_dxgi = { path = '../../gfx/src/window/dxgi', optional = true}
winit = "0.7.5"

[dev-dependencies]
angle = {git = "https://github.com/servo/angle", branch = "servo"}
gleam = "0.4.8"
winit = "0.7.5"

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
freetype = { version = "0.3", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.8.0"
core-text = { version = "6.1", default-features = false }
