[package]
name = "webrender"
version = "0.57.0"
authors = ["Glenn Watson <gw@intuitionlibrary.com>"]
license = "MPL-2.0"
repository = "https://github.com/servo/webrender"
build = "build.rs"

[features]
default = ["freetype-lib", "dx12", "gfx-hal/serde"]
freetype-lib = ["freetype/servo-freetype-sys"]
profiler = ["thread_profiler/thread_profiler"]
debugger = ["ws", "serde_json", "image", "base64"]
capture = ["webrender_api/serialize"]
replay = ["webrender_api/deserialize"]
vulkan = []
dx12 = []

[dependencies]
app_units = "0.6"
bincode = "0.9"
byteorder = "1.0"
euclid = "0.17"
fxhash = "0.2.1"
gleam = "0.4.20"
lazy_static = "1"
log = "0.4"
num-traits = "0.1.32"
time = "0.1"
rayon = "1"
webrender_api = {path = "../webrender_api"}
bitflags = "1.0"
thread_profiler = "0.1.1"
plane-split = "0.8"
png = { optional = true, version = "0.11" }
smallvec = "0.6"
ws = { optional = true, version = "0.7.3" }
serde_json = { optional = true, version = "1.0" }
serde = { version = "1.0", features = ["serde_derive"] }
image = { optional = true, version = "0.17" }
base64 = { optional = true, version = "0.3.0" }
ron = { version = "0.1.7" }
winit = "0.11"
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
rand = "0.4"

[dev-dependencies]
mozangle = "0.1"
env_logger = "0.5"
rand = "0.3"                # for the benchmarks
glutin = "0.12"             # for the example apps
gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx.git" }
gfx-backend-dx12 = { git = "https://github.com/gfx-rs/gfx.git" }

[target.'cfg(any(target_os = "android", all(unix, not(target_os = "macos"))))'.dependencies]
freetype = { version = "0.3", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.5"
core-graphics = "0.13"
core-text = { version = "9.2.0", default-features = false }


[build-dependencies]
glsl-to-spirv = { version = "0.1" }
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
ron = "0.1.7"
serde = { version = "1", features = ["serde_derive"] }
