[package]
name = "wrench"
version = "0.3.0"
authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
build = "build.rs"
license = "MPL-2.0"

[dependencies]
base64 = "0.6"
bincode = "1.0"
byteorder = "1.0"
env_logger = { version = "0.5", optional = true }
euclid = "0.17"
cfg-if = "0.1.2"
gfx-hal = { git = "https://github.com/gfx-rs/gfx.git" }
gfx-backend-vulkan = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
gfx-backend-empty = { git = "https://github.com/gfx-rs/gfx.git" }
gleam = { version = "0.5", optional = true }
glutin = { version = "0.17", optional = true }
app_units = "0.6"
image = "0.19"
clap = { version = "2", features = ["yaml"] }
lazy_static = "1"
log = "0.4"
yaml-rust = { git = "https://github.com/vvuk/yaml-rust", features = ["preserve_order"] }
serde_json = "1.0"
ron = "0.1.7"
time = "0.1"
crossbeam = "0.2"
osmesa-sys = { version = "0.1.2", optional = true }
osmesa-src = { git = "https://github.com/jrmuizel/osmesa-src", optional = true, branch = "serialize" }
webrender = { path = "../webrender", features=["capture","replay","debugger","png","profiler"] }
webrender_api = { path = "../webrender_api", features=["serialize","deserialize"] }
winit = "0.16"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.13"
core-foundation = "0.5"

[features]
default = []
headless = ["gl", "osmesa-sys", "osmesa-src" ]
pathfinder = ["webrender/pathfinder"]
gfx = []
gl = ["gleam", "glutin", "webrender/gleam"]
dx12 = ["gfx-backend-dx12", "gfx"]
metal = ["gfx-backend-metal", "gfx"]
vulkan = ["gfx-backend-vulkan", "gfx"]

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.4.1"
gfx-backend-dx12 = { git = "https://github.com/gfx-rs/gfx.git", optional = true }
mozangle = {version = "0.1.5", features = ["egl"]}

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
git = "https://github.com/gfx-rs/gfx.git"
optional = true

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
font-loader = "0.6"
