[package]
name = "wrench"
version = "0.3.0"
authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
build = "build.rs"
license = "MPL-2.0"

[dependencies]
base64 = "0.10"
bincode = "1.0"
byteorder = "1.0"
cfg-if = "0.1.2"
dirs = { version = "1.0", optional = true }
env_logger = { version = "0.5", optional = true }
euclid = "0.19"
gfx-backend-empty = "0.3.0"
gfx-hal = "0.3.1"
gleam = { optional = true, version = "0.6.2" }
glutin = { optional = true, version = "0.20" }
app_units = "0.7"
image = "0.21"
clap = { version = "2", features = ["yaml"] }
lazy_static = "1"
log = "0.4"
yaml-rust = "0.4"
serde_json = "1.0"
ron = "0.1.7"
time = "0.1"
crossbeam = "0.2"
osmesa-sys = { version = "0.1.2", optional = true }
osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
webrender = {path = "../webrender", features=["capture","replay","debugger","png","profiler"]}
webrender_api = {path = "../webrender_api", features=["serialize","deserialize"]}
winit = "0.19"
serde = {version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.17.1"
core-foundation = "0.6"

[features]
default = []
headless = ["gl", "osmesa-sys", "osmesa-src"]
pathfinder = ["webrender/pathfinder"]
gfx = ["dirs"]
gl = ["gleam", "glutin", "mozangle", "webrender/gleam"]
vulkan = ["gfx-backend-vulkan", "gfx"]

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.8"
gfx-backend-dx12 = { version = "0.3.4", optional = true, features = ["winit"] }
mozangle = {version = "0.1.5", optional = true, features = ["egl"] }

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.3.3"
optional = true
features = ["winit"]

[target.'cfg(all(any(unix, windows), not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
version = "0.3.3"
optional = true
features = ["winit", "x11"]

[target.'cfg(all(unix, not(target_os = "android")))'.dependencies]
font-loader = "0.7"
