[package]
name = "wrench"
version = "0.3.0"
authors = ["Vladimir Vukicevic <vladimir@pobox.com>"]
build = "build.rs"
license = "MPL-2.0"
edition = "2018"

[dependencies]
base64 = "0.10"
bincode = "1.0"
byteorder = "1.0"
cfg-if = "0.1.2"
dirs = { version = "1.0", optional = true }
env_logger = { version = "0.5", optional = true }
euclid = "0.20"
glutin = { optional = true, version = "0.21" }
app_units = "0.7"
clap = { version = "2", features = ["yaml"] }
gfx-backend-empty = { optional = true, version = "0.4.0" }
gfx-hal = { version = "0.4.0", features = ["serde"] }
gleam = { optional = true, version = "0.6.2" }
lazy_static = "1"
log = "0.4"
yaml-rust = "0.4"
serde_json = "1.0"
ron = "0.1.7"
time = "0.1"
crossbeam = "0.2"
osmesa-sys = { version = "0.1.2", optional = true }
osmesa-src = { git = "https://github.com/servo/osmesa-src", optional = true }
webrender = {path = "../webrender", features=["capture","replay","debugger","png","profiler","no_static_freetype"]}
webrender_api = {path = "../webrender_api", features=["serialize","deserialize"]}
winit = "0.19"
serde = {version = "1.0", features = ["derive"] }
semver = "0.9.0"

[dependencies.image]
version = "0.22"
default-features = false
features = ["png"]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.17.1"
core-foundation = "0.6.4"

[features]
default = [ "env_logger" ]
headless = [ "gl", "osmesa-sys", "osmesa-src" ]
gl = ["gleam", "glutin", "mozangle", "webrender/gl", "gfx-backend-empty"]
gfx = ["dirs"]
dx12 = ["gfx-backend-dx12", "gfx"]
metal = ["gfx-backend-metal", "gfx"]
vulkan = ["gfx-backend-vulkan", "gfx"]

[target.'cfg(target_os = "windows")'.dependencies]
dwrote = "0.9"
mozangle = { optional = true, version = "0.3.1", features = ["egl"]}
gfx-backend-dx12 = { optional = true, version = "0.4.1" }

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.4.0"
optional = true

[target.'cfg(all(any(unix, windows), not(target_os = "macos")))'.dependencies.gfx-backend-vulkan]
version = "0.4.0"
optional = true
features = ["x11"]

[target.'cfg(all(unix, not(target_os = "android")))'.dependencies]
font-loader = "0.7"

# Configuration information used when building wrench as an APK.
[package.metadata.android]
package_name = "org.mozilla.wrench"
label = "Wrench"
android_version = 28
target_sdk_version = 18
min_sdk_version = 18
fullscreen = true
build_targets = [ "armv7-linux-androideabi", "i686-linux-android" ]
opengles_version_major = 3
opengles_version_minor = 0
[package.metadata.android.application_attributes]
"android:hardwareAccelerated" = "true"
[package.metadata.android.activity_attributes]
"android:screenOrientation" = "unspecified"
"android:uiOptions" = "none"
[[package.metadata.android.permission]]
name = "android.permission.READ_EXTERNAL_STORAGE"
